Added pest control.

--- a/app/src/main/res/layout/activity_pest_control.xml
+++ b/app/src/main/res/layout/activity_pest_control.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_repair">
+    tools:context=".pest_control">
 
 
     <ImageView
@@ -13,17 +13,17 @@
         android:layout_height="70dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/textView"
-        app:layout_constraintEnd_toStartOf="@id/textView"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/homerepair" />
+        app:srcCompat="@drawable/pestcontrol" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Home Repair"
+        android:text="Pest Control"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,18 +31,18 @@
 
 
     <Spinner
-        android:id="@+id/spinner_damage"
+        android:id="@+id/spinner_pest"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:entries="@array/home_repair"
+        android:entries="@array/pest"
         android:spinnerMode="dropdown"
         android:textSize="65dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
     <EditText
