--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -41,8 +41,8 @@
 
     <EditText
         android:id="@+id/email2"
-        android:layout_width="395dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -59,8 +59,8 @@
 
     <EditText
         android:id="@+id/phonenumber"
-        android:layout_width="395dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -102,8 +102,8 @@
 
     <EditText
         android:id="@+id/vendor"
-        android:layout_width="395dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -121,8 +121,8 @@
 
     <EditText
         android:id="@+id/passwordv"
-        android:layout_width="395dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -140,13 +140,13 @@
 
     <EditText
         android:id="@+id/address"
-        android:layout_width="395dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginBottom="292dp"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPostalAddress"
@@ -160,10 +160,10 @@
     <EditText
         android:id="@+id/zipcode"
         android:layout_width="116dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="172dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="244dp"
         android:ems="10"
         android:hint="Zipcode"
         android:inputType="number"
@@ -174,26 +174,30 @@
 
     <EditText
         android:id="@+id/city"
-        android:layout_width="174dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginRight="250dp"
+        android:layout_marginBottom="244dp"
         android:ems="10"
         android:hint="City"
         android:inputType="textPersonName"
         android:paddingTop="2dp"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/states"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="232dp"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/zipcode" />
@@ -202,22 +206,22 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="180dp"
         android:gravity="center"
         android:text="Agree to pay 20% of money earned."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Switch
         android:id="@+id/switch1"
         android:layout_width="56dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
