--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -31,7 +31,7 @@
         android:id="@+id/tutoring"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="368dp"
+        android:layout_marginBottom="340dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
@@ -101,7 +101,7 @@
         android:id="@+id/packaging"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="368dp"
+        android:layout_marginBottom="340dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
@@ -115,7 +115,7 @@
         android:id="@+id/computer"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginBottom="196dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
@@ -129,7 +129,7 @@
         android:id="@+id/homeRepair"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginBottom="196dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
@@ -143,7 +143,7 @@
         android:id="@+id/pestControl"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginBottom="196dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
@@ -283,6 +283,17 @@
         android:layout_marginTop="8dp"
         android:text="back"
         android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/displayUser"
+        android:layout_width="99dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="76dp"
+        android:gravity="center"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
