--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".settings">
 
+    <View
+        android:id="@+id/divider6"
+        style="@style/Divider"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#1855B1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider5"
+        style="@style/Divider"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#1855B1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider4"
+        style="@style/Divider"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="304dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#1855B1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/sound"
         android:layout_width="208dp"
@@ -14,6 +59,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="140dp"
         android:text="Sound"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +71,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="204dp"
         android:text="Use Points"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,12 +83,13 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="272dp"
         android:text="Comission"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ToggleButton
         android:id="@+id/toggleButton"
-        android:layout_width="69dp"
+        android:layout_width="70dp"
         android:layout_height="36dp"
         android:layout_marginStart="72dp"
         android:layout_marginLeft="72dp"
@@ -53,8 +101,8 @@
 
     <ToggleButton
         android:id="@+id/toggleButton2"
-        android:layout_width="73dp"
-        android:layout_height="39dp"
+        android:layout_width="70dp"
+        android:layout_height="36dp"
         android:layout_marginStart="72dp"
         android:layout_marginLeft="72dp"
         android:layout_marginTop="204dp"
@@ -76,7 +124,7 @@
     <ToggleButton
         android:id="@+id/toggleButton3"
         android:layout_width="70dp"
-        android:layout_height="42dp"
+        android:layout_height="36dp"
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
         android:layout_marginTop="260dp"
