--- a/app/src/main/res/layout/activity_home_repair.xml
+++ b/app/src/main/res/layout/activity_home_repair.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_repair">
+    tools:context=".home_repair"
+    android:background="@drawable/simple_background_v2">
 
 
     <ImageView
