--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".orders">
+    tools:context=".orders"
+    android:background="@drawable/simple_background_v2">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
