--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,7 +2,8 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:background="@drawable/simple_background_v2"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    >
 
 </androidx.appcompat.widget.Toolbar>
