--- a/app/src/main/res/layout/activity_choose_vendor.xml
+++ b/app/src/main/res/layout/activity_choose_vendor.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="92dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
-        android:text="Choose a vendor"
+        android:text="Choose a Vendor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,6 +59,7 @@
         android:layout_marginEnd="320dp"
         android:layout_marginRight="320dp"
         android:text="Vendors"
+        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +74,8 @@
         android:layout_marginTop="184dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="prices"
+        android:text="Prices"
+        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +100,10 @@
         android:layout_width="66dp"
         android:layout_height="24dp"
         android:layout_marginTop="184dp"
+        android:layout_marginBottom="0dp"
         android:text="Rating"
 
+        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
         app:layout_constraintHorizontal_bias="0.38"
         app:layout_constraintStart_toEndOf="@+id/textView18"
