--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_checkout"
-    tools:context=".CheckoutActivity">
+    tools:context=".CheckoutActivity"
+    tools:showIn="@layout/activity_checkout">
 
     <!--  ...  -->
 
@@ -16,17 +15,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp" />
 
     <Button
-        android:text="Pay"
+        android:id="@+id/payButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/payButton"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardInputWidget"
+        android:text="@string/Pay"
+        app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"
         app:layout_constraintStart_toStartOf="@+id/cardInputWidget"
-        app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardInputWidget" />
 
     <!--  ...  -->
 
