--- a/app/src/main/res/layout/activity_choose_vendor.xml
+++ b/app/src/main/res/layout/activity_choose_vendor.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chooseVendor"
-    android:background="@drawable/simple_background_v2">
+    android:background="@drawable/simple_background_v2"
+    >
 
     <View
         android:id="@+id/viewDivider"
@@ -69,25 +70,22 @@
         android:id="@+id/textView19"
         android:layout_width="61dp"
         android:layout_height="27dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginLeft="300dp"
         android:layout_marginTop="184dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:text="Prices"
         app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.834"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.523" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         style="@style/ratingBar"
-        android:layout_width="99dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="248dp"
-        android:background="#FFFFFF"
+        android:background="#00FFFFFF"
         android:numStars="5"
         android:rating="5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,14 +98,14 @@
         android:layout_width="66dp"
         android:layout_height="24dp"
         android:layout_marginTop="184dp"
-        android:layout_marginBottom="0dp"
         android:text="Rating"
 
         app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
-        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.458" />
 
     <TextView
         android:id="@+id/textView21"
@@ -138,6 +136,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="244dp"
+        android:clickable="true"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ratingBar"
@@ -150,10 +149,11 @@
         android:id="@+id/textView23"
         android:layout_width="63dp"
         android:layout_height="25dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="248dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toEndOf="@+id/ratingBar"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
