--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -11,7 +11,7 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="0dp" />
 
     <Button
@@ -32,13 +32,12 @@
         android:id="@+id/tutoring"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="340dp"
+        android:layout_marginBottom="408dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/tutoring" />
 
@@ -102,13 +101,13 @@
         android:id="@+id/packaging"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="340dp"
+        android:layout_marginBottom="408dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintHorizontal_bias="0.882"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/packaging" />
 
@@ -116,13 +115,13 @@
         android:id="@+id/computer"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="264dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
+        app:layout_constraintHorizontal_bias="0.123"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/computer_repair_icon" />
 
@@ -130,13 +129,13 @@
         android:id="@+id/homeRepair"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="264dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/homerepair" />
 
@@ -144,13 +143,13 @@
         android:id="@+id/pestControl"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="264dp"
         android:background="@null"
         android:padding="5dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintHorizontal_bias="0.882"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/pestcontrol" />
 
@@ -179,8 +178,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginLeft="168dp"
+        android:layout_marginStart="184dp"
         android:text="Electrical"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -212,8 +210,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginLeft="168dp"
+        android:layout_marginStart="196dp"
         android:text="Tutoring"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -245,8 +242,7 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="156dp"
-        android:layout_marginRight="156dp"
+        android:layout_marginEnd="172dp"
         android:text="Home Repair"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
