--- a/app/src/main/res/layout/activity_vendor_login.xml
+++ b/app/src/main/res/layout/activity_vendor_login.xml
@@ -12,9 +12,7 @@
         android:layout_width="345dp"
         android:layout_height="45dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -23,7 +21,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.514" />
+        app:layout_constraintVertical_bias="0.461" />
 
     <Button
         android:id="@+id/loginV"
@@ -61,12 +59,12 @@
         android:id="@+id/textView6"
         android:layout_width="120dp"
         android:layout_height="20dp"
-        android:layout_marginBottom="292dp"
+        android:layout_marginBottom="368dp"
         android:text="Forgot Password?"
         android:textColor="#3670FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.941"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
@@ -110,5 +108,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backLog"
+        android:layout_width="81dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="40dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
