--- a/app/src/main/res/layout/activity_add_services.xml
+++ b/app/src/main/res/layout/activity_add_services.xml
@@ -55,8 +55,8 @@
 
     <Button
         android:id="@+id/sub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="103dp"
+        android:layout_height="55dp"
         android:layout_marginBottom="324dp"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
