--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -36,59 +36,58 @@
 
     <EditText
         android:id="@+id/last"
-        android:layout_width="170dp"
-        android:layout_height="45dp"
+        android:layout_width="185dp"
+        android:layout_height="58dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Last"
         android:inputType="textPersonName"
         android:paddingTop="2dp"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintStart_toEndOf="@+id/first"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="380dp"
-        android:layout_height="45dp"
+        android:layout_width="406dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.388"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/phonenumber"
-        android:layout_width="380dp"
-        android:layout_height="45dp"
+        android:layout_width="406dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="236dp"
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signup"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
+        android:layout_width="172dp"
+        android:layout_height="54dp"
         android:layout_marginBottom="92dp"
         android:text="Sign Up"
         android:textSize="14sp"
@@ -99,11 +98,12 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="347dp"
-        android:layout_height="52dp"
+        android:layout_width="385dp"
+        android:layout_height="71dp"
         android:layout_marginTop="152dp"
         android:gravity="center"
         android:text="Register to to receive points, discounts, tips and review services of Service Providers. "
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,17 +111,16 @@
 
     <EditText
         android:id="@+id/first"
-        android:layout_width="163dp"
-        android:layout_height="45dp"
+        android:layout_width="185dp"
+        android:layout_height="58dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="First"
         android:inputType="textPersonName"
         android:paddingTop="2dp"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
@@ -129,18 +128,16 @@
 
     <EditText
         android:id="@+id/passwordR"
-        android:layout_width="380dp"
-        android:layout_height="45dp"
+        android:layout_width="406dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Password (atleast 6 characters)"
         android:inputType="textPersonName"
         android:paddingTop="2dp"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/phonenumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
